--- a/dictionary/templates/base_generic.html
+++ b/dictionary/templates/base_generic.html
@@ -1,6 +1,20 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-   <body>
-     {% block content %}<!-- default content text (typically empty) -->{% endblock %}
+  <head>
+    <!--Import Google Icon Font-->
+    <link href="{% static "material-design-icons/iconfont/material-icons.css" %}" rel="stylesheet">
+    <!--Import materialize.css-->
+    <link type="text/css" rel="stylesheet" href="{% static "materialize/css/materialize.css" %}" media="screen,projection"/>
+
+    <!--Let browser know website is optimized for mobile-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+   </head>
+  <body>
+    {% block content %}<!-- default content text (typically empty) -->{% endblock %}
+
+    <!--JavaScript at end of body for optimized loading-->
+    <script type="text/javascript" src="{% static "materialize/js/materialize.js" %}"></script>
   </body>
 </html>
