--- a/dictionary/templates/base_generic.html
+++ b/dictionary/templates/base_generic.html
@@ -1,5 +1,8 @@
 {% load static %}
 
+{% include 'material/includes/material_css.html' %}
+{% include 'material/includes/material_js.html' %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -12,6 +15,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
    </head>
   <body>
+    <script type="text/javascript" src="{% static "jquery/jquery-3.4.1.js" %}"></script>
+   
     {% block content %}<!-- default content text (typically empty) -->{% endblock %}
 
     <!--JavaScript at end of body for optimized loading-->
