--- a/dictionary/templates/dictionary/search.html
+++ b/dictionary/templates/dictionary/search.html
@@ -1,13 +1,16 @@
 {% extends "base_generic.html" %}
 
+{% load material_form %}
+
 {% block content %}
- <h1>Search</h1>
+<h1>Search</h1>
 
 <form action="" method="post">
   {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
-  <input type="submit" value="Search">
+
+  {% form form=form %}
+  {% attr form.expression 'widget' placeholder%} {% endattr %}
+  {% endform %}
+  <input type="submit" value="Search" class="btn">
 </form>
 {% endblock %}
