--- a/dictionary/templates/base_generic.html
+++ b/dictionary/templates/base_generic.html
@@ -2,29 +2,31 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <link href="{% static "fontawesome/css/all.css" %}" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href\="{% static "mdb/css/bootstrap.css" %}"/>
-    <link type="text/css" rel="stylesheet" href="{% static "mdb/css/mdb.css" %}"/>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta http-equiv="x-ua-compatible" content="ie=edge">
+  <title>Material Design for Bootstrap</title>
+  <link rel="stylesheet" href="{% static "css/all.css" %}">
+  <link rel="stylesheet" href="{% static "mdb/css/bootstrap.min.css" %}">
+  <link rel="stylesheet" href="{% static "mdb/css/mdb.min.css" %}">
+</head>
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark primary-color">
+      <a class="navbar-brand" href="#">sumatora</a>
+  </nav>
+</header>
 
-    <!--Let browser know website is optimized for mobile-->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-   </head>
-  <body>
+  <main>
+    {% block content %}
+    {% endblock %}
+  </main>
 
-    <div class="container">
-      <div class="row justify-content-center">
-	        <div class="col-8">
-   
-		  {% block content %}<!-- default content text (typically empty) -->{% endblock %}
+<script type="text/javascript" src="{% static "mdb/js/jquery.min.js" %}"></script>
+<script type="text/javascript" src="{% static "mdb/js/popper.min.js" %}"></script>
+<script type="text/javascript" src="{% static "mdb/js/bootstrap.min.js" %}"></script>
+<script type="text/javascript" src="{% static "mdb/js/mdb.min.js" %}"></script>
 
-		</div>
-      </div>
-      </div>
-
-     <script type="text/javascript" src="{% static "jquery/jquery-3.4.1.js" %}"></script>
-     <script type="text/javascript" src="{% static "mdb/js/popper.js" %}"></script>
-     <script type="text/javascript" src="{% static "mdb/js/bootstrap.js" %}"></script>
-     <script type="text/javascript" src="{% static "mdb/js/mdb.js" %}"></script>
-  </body>
+</body>
 </html>
