--- a/dictionary/templates/dictionary/results.html
+++ b/dictionary/templates/dictionary/results.html
@@ -2,41 +2,69 @@
 
 {% block content %}
 
+<div class="p-2">
+  <i>
+    {% if results %}
+    
+    Results for '{{ term }}':
+
+    {% else %}
+
+    No results found for '{{ term }}'.
+
+    {% endif %}
+  </i>
+  
+</div>
+
 {% for r in results %}
 
-<p>{{ r.seq }}</p>
+<div class="card">
+  <div class="card-body">
 
-{% for w in r.get_writings %}
+    <p class="card-text">
 
-{% if w.prio %}
-<b>
-{% endif %}
-  
-{{ w.writing }}
+      {% for w in r.get_writings %}
 
-{%if w.prio %}
-</b>
-{% endif %}
+      {% if w.prio %}
+      <mark>
+	{% endif %}
+	
+	{{ w.writing }}
 
-{% if not forloop.last %} - {% endif %}
+	{%if w.prio %}
+      </mark>
+      {% endif %}
 
-{% endfor %}
+      {% if not forloop.last %}・{% endif %}
 
-{% for w in r.get_readings %}
+      {% endfor %}
 
-{% if w.prio %}
-<b>
-{% endif %}
-  
-{{ w.writing }}
+      {% for w in r.get_readings %}
 
-{%if w.prio %}
-</b>
-{% endif %}
+      {% if forloop.first %}
+      【
+      {% endif %}
 
-{% if not forloop.last %} - {% endif %}
+      {% if w.prio %}
+      <mark>
+	{% endif %}
+	
+	{{ w.reading }}
 
-{% endfor %}
+	{%if w.prio %}
+      </mark>
+      {% endif %}
+
+      {% if not forloop.last %}・{% else %}
+      】
+      {% endif %}
+
+      {% endfor %}
+
+    </p>
+  </div>
+</div>
 
 {% endfor %}
 
