--- a/dictionary/templates/dictionary/results.html
+++ b/dictionary/templates/dictionary/results.html
@@ -17,9 +17,7 @@
   
 </div>
 
-{% for result in results %}
-
-{% for r in result %}
+{% for r in results %}
 
 <div class="card">
   <div class="card-body">
@@ -83,9 +81,6 @@
     </p>
   </div>
 </div>
-
-{% endfor %}
-
 {% endfor %}
 
 {% endblock %}
